Revision history for DBIx::Class

    * New Features / Changes
        - SQLMaker now accepts \'literal' with the 'for' rs attribute as an
          override to the builtin FOR options
    * Fixes
        - Fix test failure on perl 5.8

0.08203 2012-10-18
    * Fixes
        - Really fix inadequate $dbh->ping SQLite implementation (what shipped
          in 0.08201 tickled other deficiencies in DBD::SQLite itself)

0.08202 2012-10-06
    * Fixes
        - Replace inadequate $dbh->ping SQLite implementation with our own,
          fixes RT#78420

0.08200 2012-08-24 (UTC)
    * Fixes
        - Change one of the new tests for the previous release to not require
          SQL::Translator

0.08199 2012-08-22 (UTC)
    * Fixes
        - Roll back incomplete (and broken) internal changes - restore prefetch functionality

0.08198 2012-07-11 03:43 (UTC)
    * Fixes
        - Fix a number of Win32 Test issues
        - Fix silent Oracle connection failures

0.08197 2012-07-10 10:32 (UTC)
    * New Features / Changes
        - Issue a warning when DateTime objects are passed to ->search
        - Fast populate() in void context is now even more efficient by
          going directly through execute_for_fetch bypassing execute_array
        - Fix update()/delete() on complex resultsets to no longer fall back
          to silly row-by-row deletion, construct a massive OR statement
          instead
        - Allow complex update/delete operations on sources without a
          primary key, as long as they have at least one non-nullable
          unique constraint
        - dbicadmin now better supports catalyst-style config files, by
          unrolling 'config_info' hashkeys
        - Multiple Improvements MSSQL over DBD::ADO
          - Transaction support
          - Support for VARCHAR(MAX)/VARBINARY(MAX)/NVARCHAR(MAX) datatypes
          - Nomalization of retrieved GUID values

    * Fixes
        - Fix complex has_many prefetch with resultsets not selecting identity